tests/snapshots/libsml_testing__app_layer@EMH_eHZ-IW8E2A5L0EK2P_with_error.bin.snap
---
source: tests/libsml-testing.rs
expression: s
input_file: tests/libsml-testing/EMH_eHZ-IW8E2A5L0EK2P_with_error.bin
---
PowerMeterTransmission:
  server_id: [6, 69, 77, 72, 1, 7, 25, 124, 36, 86]
  time: Some(31992111)
  values:
    1-0:1.8.0 = 2795692.7 Wh
    1-0:1.8.1 = 2795692.7 Wh
    1-0:1.8.2 = 0.0 Wh
    1-0:16.7.0 = 136.7 W
PowerMeterTransmission:
  server_id: [6, 69, 77, 72, 1, 7, 25, 124, 36, 86]
  time: Some(31992114)
  values:
    1-0:1.8.0 = 2795692.8 Wh
    1-0:1.8.1 = 2795692.8 Wh
    1-0:1.8.2 = 0.0 Wh
    1-0:16.7.0 = 136.8 W
PowerMeterTransmission:
  server_id: [6, 69, 77, 72, 1, 7, 25, 124, 36, 86]
  time: Some(31992116)
  values:
    1-0:1.8.0 = 2795692.9 Wh
    1-0:1.8.1 = 2795692.9 Wh
    1-0:1.8.2 = 0.0 Wh
    1-0:16.7.0 = 136.5 W
PowerMeterTransmission:
  server_id: [6, 69, 77, 72, 1, 7, 25, 124, 36, 86]
  time: Some(31992119)
  values:
    1-0:1.8.0 = 2795693.0 Wh
    1-0:1.8.1 = 2795693.0 Wh
    1-0:1.8.2 = 0.0 Wh
    1-0:16.7.0 = 136.6 W
PowerMeterTransmission:
  server_id: [6, 69, 77, 72, 1, 7, 25, 124, 36, 86]
  time: Some(31992122)
  values:
    1-0:1.8.0 = 2795693.1 Wh
    1-0:1.8.1 = 2795693.1 Wh
    1-0:1.8.2 = 0.0 Wh
    1-0:16.7.0 = 136.8 W
PowerMeterTransmission:
  server_id: [6, 69, 77, 72, 1, 7, 25, 124, 36, 86]
  time: Some(31992124)
  values:
    1-0:1.8.0 = 2795693.2 Wh
    1-0:1.8.1 = 2795693.2 Wh
    1-0:1.8.2 = 0.0 Wh
    1-0:16.7.0 = 136.2 W
PowerMeterTransmission:
  server_id: [6, 69, 77, 72, 1, 7, 25, 124, 36, 86]
  time: Some(31992127)
  values:
    1-0:1.8.0 = 2795693.3 Wh
    1-0:1.8.1 = 2795693.3 Wh
    1-0:1.8.2 = 0.0 Wh
    1-0:16.7.0 = 136.6 W
PowerMeterTransmission:
  server_id: [6, 69, 77, 72, 1, 7, 25, 124, 36, 86]
  time: Some(31992129)
  values:
    1-0:1.8.0 = 2795693.4 Wh
    1-0:1.8.1 = 2795693.4 Wh
    1-0:1.8.2 = 0.0 Wh
    1-0:16.7.0 = 136.5 W
PowerMeterTransmission:
  server_id: [6, 69, 77, 72, 1, 7, 25, 124, 36, 86]
  time: Some(31992132)
  values:
    1-0:1.8.0 = 2795693.5 Wh
    1-0:1.8.1 = 2795693.5 Wh
    1-0:1.8.2 = 0.0 Wh
    1-0:16.7.0 = 136.4 W
PowerMeterTransmission:
  server_id: [6, 69, 77, 72, 1, 7, 25, 124, 36, 86]
  time: Some(31992135)
  values:
    1-0:1.8.0 = 2795693.6 Wh
    1-0:1.8.1 = 2795693.6 Wh
    1-0:1.8.2 = 0.0 Wh
    1-0:16.7.0 = 136.6 W
PowerMeterTransmission:
  server_id: [6, 69, 77, 72, 1, 7, 25, 124, 36, 86]
  time: Some(31992137)
  values:
    1-0:1.8.0 = 2795693.7 Wh
    1-0:1.8.1 = 2795693.7 Wh
    1-0:1.8.2 = 0.0 Wh
    1-0:16.7.0 = 136.4 W
Decoder error: DiscardedBytes(136)

