tests/snapshots/libsml_testing__app_layer@EMH_eHZ361L5R.bin.snap
---
source: tests/libsml-testing.rs
expression: s
input_file: tests/libsml-testing/EMH_eHZ361L5R.bin
---
PowerMeterTransmission:
  server_id: [49, 48, 48, 49, 49, 56, 53]
  time: None
  values:
    1-0:2.8.1 = 110340315.1 Wh
    1-0:1.7.1 = -5632.1916 W

