tests/snapshots/libsml_testing__app_layer@EasyMeter_Q3A_A1064V1009.bin.snap
---
source: tests/libsml-testing.rs
expression: s
input_file: tests/libsml-testing/EasyMeter_Q3A_A1064V1009.bin
---
Decoder error: DiscardedBytes(445)
Decoder error: InvalidMessage { checksum_mismatch: (54139, 2392), end_esc_misaligned: false, num_padding_bytes: 3 }
PowerMeterTransmission:
  server_id: [9, 1, 69, 83, 89, 17, 3, 181, 153, 165]
  time: Some(16310127)
  values:
    1-0:1.8.0 = 2941646.1614 Wh
    1-0:2.8.0 = 110073.1603 Wh
    1-0:16.7.0 = 810.26 W
    1-0:36.7.0 = 505.23 W
    1-0:56.7.0 = 63.19 W
    1-0:76.7.0 = 241.83 W
    1-0:32.7.0 = 232.5 V
    1-0:52.7.0 = 230.7 V
    1-0:72.7.0 = 232.5 V
PowerMeterTransmission:
  server_id: [9, 1, 69, 83, 89, 17, 3, 181, 153, 165]
  time: Some(16310128)
  values:
    1-0:1.8.0 = 2941646.3734 Wh
    1-0:2.8.0 = 110073.1603 Wh
    1-0:16.7.0 = 763.08 W
    1-0:36.7.0 = 486.22 W
    1-0:56.7.0 = 51.67 W
    1-0:76.7.0 = 225.18 W
    1-0:32.7.0 = 232.4 V
    1-0:52.7.0 = 230.6 V
    1-0:72.7.0 = 232.2 V
Decoder error: InvalidMessage { checksum_mismatch: (62722, 55140), end_esc_misaligned: true, num_padding_bytes: 3 }
Decoder error: InvalidMessage { checksum_mismatch: (2297, 29438), end_esc_misaligned: true, num_padding_bytes: 3 }
PowerMeterTransmission:
  server_id: [9, 1, 69, 83, 89, 17, 3, 181, 153, 165]
  time: Some(16310131)
  values:
    1-0:1.8.0 = 2941646.9715 Wh
    1-0:2.8.0 = 110073.1603 Wh
    1-0:16.7.0 = 703.08 W
    1-0:36.7.0 = 464.86 W
    1-0:56.7.0 = 34.77 W
    1-0:76.7.0 = 203.44 W
    1-0:32.7.0 = 232.2 V
    1-0:52.7.0 = 230.6 V
    1-0:72.7.0 = 232.3 V
PowerMeterTransmission:
  server_id: [9, 1, 69, 83, 89, 17, 3, 181, 153, 165]
  time: Some(16310132)
  values:
    1-0:1.8.0 = 2941647.1626 Wh
    1-0:2.8.0 = 110073.1603 Wh
    1-0:16.7.0 = 687.86 W
    1-0:36.7.0 = 458.29 W
    1-0:56.7.0 = 32.40 W
    1-0:76.7.0 = 197.16 W
    1-0:32.7.0 = 232.2 V
    1-0:52.7.0 = 230.5 V
    1-0:72.7.0 = 232.0 V
Decoder error: DiscardedBytes(146)

