tests/snapshots/libsml_testing__app_layer@HOLLEY_DTZ541-BDBA_with_PIN.bin.snap
---
source: tests/libsml-testing.rs
expression: s
input_file: tests/libsml-testing/HOLLEY_DTZ541-BDBA_with_PIN.bin
---
PowerMeterTransmission:
  server_id: [10, 1, 72, 76, 89, 2, 0, 13, 107, 230]
  time: Some(24208040)
  values:
    1-0:1.8.0 = 2355929.0 Wh
    1-0:16.7.0 = 376 W
PowerMeterTransmission:
  server_id: [10, 1, 72, 76, 89, 2, 0, 13, 107, 230]
  time: Some(24208041)
  values:
    1-0:1.8.0 = 2355929.1 Wh
    1-0:16.7.0 = 374 W

