tests/snapshots/libsml_testing__app_layer@HOLLEY_DTZ541-BDBA_without_PIN.bin.snap
---
source: tests/libsml-testing.rs
expression: s
input_file: tests/libsml-testing/HOLLEY_DTZ541-BDBA_without_PIN.bin
---
PowerMeterTransmission:
  server_id: [10, 1, 72, 76, 89, 2, 0, 13, 107, 230]
  time: Some(23876784)
  values:
    1-0:1.8.0 = 2324000 Wh

