tests/snapshots/libsml_testing__app_layer@HOLLEY_DTZ541-ZDBA.bin.snap
---
source: tests/libsml-testing.rs
expression: s
input_file: tests/libsml-testing/HOLLEY_DTZ541-ZDBA.bin
---
PowerMeterTransmission:
  server_id: [10, 1, 72, 76, 89, 2, 0, 3, 169, 16]
  time: Some(1347075)
  values:
    1-0:1.8.1 = 0.0 Wh
    1-0:1.8.2 = 177360.1 Wh
    1-0:2.8.0 = 314926.0 Wh
    1-0:16.7.0 = 460 W
    1-0:32.7.0 = 232.3 V
    1-0:52.7.0 = 232.5 V
    1-0:72.7.0 = 232.5 V
    1-0:31.7.0 = 1.06 A
    1-0:51.7.0 = 1.74 A
    1-0:71.7.0 = 0.91 A
    1-0:81.7.1 = 120 °
    1-0:81.7.2 = 240 °
    1-0:81.7.4 = 298 °
    1-0:81.7.15 = 312 °
    1-0:81.7.26 = 288 °
    1-0:14.7.0 = 50.0 Hz
PowerMeterTransmission:
  server_id: [10, 1, 72, 76, 89, 2, 0, 3, 169, 16]
  time: Some(1347077)
  values:
    1-0:1.8.1 = 0.0 Wh
    1-0:1.8.2 = 177360.3 Wh
    1-0:2.8.0 = 314926.0 Wh
    1-0:16.7.0 = 459 W
    1-0:32.7.0 = 232.3 V
    1-0:52.7.0 = 232.5 V
    1-0:72.7.0 = 232.6 V
    1-0:31.7.0 = 1.07 A
    1-0:51.7.0 = 1.74 A
    1-0:71.7.0 = 0.91 A
    1-0:81.7.1 = 121 °
    1-0:81.7.2 = 240 °
    1-0:81.7.4 = 298 °
    1-0:81.7.15 = 312 °
    1-0:81.7.26 = 288 °
    1-0:14.7.0 = 50.0 Hz
PowerMeterTransmission:
  server_id: [10, 1, 72, 76, 89, 2, 0, 3, 169, 16]
  time: Some(1347078)
  values:
    1-0:1.8.1 = 0.0 Wh
    1-0:1.8.2 = 177360.5 Wh
    1-0:2.8.0 = 314926.0 Wh
    1-0:16.7.0 = 460 W
    1-0:32.7.0 = 232.4 V
    1-0:52.7.0 = 232.6 V
    1-0:72.7.0 = 232.6 V
    1-0:31.7.0 = 1.07 A
    1-0:51.7.0 = 1.74 A
    1-0:71.7.0 = 0.91 A
    1-0:81.7.1 = 120 °
    1-0:81.7.2 = 241 °
    1-0:81.7.4 = 298 °
    1-0:81.7.15 = 312 °
    1-0:81.7.26 = 288 °
    1-0:14.7.0 = 50.0 Hz
PowerMeterTransmission:
  server_id: [10, 1, 72, 76, 89, 2, 0, 3, 169, 16]
  time: Some(1347080)
  values:
    1-0:1.8.1 = 0.0 Wh
    1-0:1.8.2 = 177360.7 Wh
    1-0:2.8.0 = 314926.0 Wh
    1-0:16.7.0 = 468 W
    1-0:32.7.0 = 232.4 V
    1-0:52.7.0 = 232.6 V
    1-0:72.7.0 = 232.6 V
    1-0:31.7.0 = 1.07 A
    1-0:51.7.0 = 1.74 A
    1-0:71.7.0 = 0.91 A
    1-0:81.7.1 = 119 °
    1-0:81.7.2 = 240 °
    1-0:81.7.4 = 299 °
    1-0:81.7.15 = 313 °
    1-0:81.7.26 = 288 °
    1-0:14.7.0 = 50.0 Hz
PowerMeterTransmission:
  server_id: [10, 1, 72, 76, 89, 2, 0, 3, 169, 16]
  time: Some(1347082)
  values:
    1-0:1.8.1 = 0.0 Wh
    1-0:1.8.2 = 177360.9 Wh
    1-0:2.8.0 = 314926.0 Wh
    1-0:16.7.0 = 463 W
    1-0:32.7.0 = 232.4 V
    1-0:52.7.0 = 232.6 V
    1-0:72.7.0 = 232.6 V
    1-0:31.7.0 = 1.06 A
    1-0:51.7.0 = 1.75 A
    1-0:71.7.0 = 0.91 A
    1-0:81.7.1 = 120 °
    1-0:81.7.2 = 241 °
    1-0:81.7.4 = 298 °
    1-0:81.7.15 = 313 °
    1-0:81.7.26 = 288 °
    1-0:14.7.0 = 50.0 Hz
PowerMeterTransmission:
  server_id: [10, 1, 72, 76, 89, 2, 0, 3, 169, 16]
  time: Some(1347083)
  values:
    1-0:1.8.1 = 0.0 Wh
    1-0:1.8.2 = 177361.1 Wh
    1-0:2.8.0 = 314926.0 Wh
    1-0:16.7.0 = 460 W
    1-0:32.7.0 = 232.4 V
    1-0:52.7.0 = 232.6 V
    1-0:72.7.0 = 232.5 V
    1-0:31.7.0 = 1.06 A
    1-0:51.7.0 = 1.74 A
    1-0:71.7.0 = 0.91 A
    1-0:81.7.1 = 119 °
    1-0:81.7.2 = 240 °
    1-0:81.7.4 = 298 °
    1-0:81.7.15 = 312 °
    1-0:81.7.26 = 288 °
    1-0:14.7.0 = 50.0 Hz
PowerMeterTransmission:
  server_id: [10, 1, 72, 76, 89, 2, 0, 3, 169, 16]
  time: Some(1347085)
  values:
    1-0:1.8.1 = 0.0 Wh
    1-0:1.8.2 = 177361.3 Wh
    1-0:2.8.0 = 314926.0 Wh
    1-0:16.7.0 = 462 W
    1-0:32.7.0 = 232.4 V
    1-0:52.7.0 = 232.6 V
    1-0:72.7.0 = 232.5 V
    1-0:31.7.0 = 1.07 A
    1-0:51.7.0 = 1.74 A
    1-0:71.7.0 = 0.91 A
    1-0:81.7.1 = 120 °
    1-0:81.7.2 = 240 °
    1-0:81.7.4 = 298 °
    1-0:81.7.15 = 312 °
    1-0:81.7.26 = 288 °
    1-0:14.7.0 = 50.0 Hz
Decoder error: DiscardedBytes(400)

