tests/snapshots/libsml_testing__app_layer@ISKRA_MT175_D1A52-V22-K0t.bin.snap
---
source: tests/libsml-testing.rs
expression: s
input_file: tests/libsml-testing/ISKRA_MT175_D1A52-V22-K0t.bin
---
PowerMeterTransmission:
  server_id: [6, 73, 83, 75, 1, 14, 31, 102, 41, 154]
  time: Some(99258248)
  values:
    1-0:1.8.0 = 10732309.1 Wh
    1-0:1.8.1 = 10732309.1 Wh
    1-0:1.8.2 = 0.0 Wh
    1-0:2.8.0 = 28275324.5 Wh
    1-0:2.8.1 = 28275324.5 Wh
    1-0:2.8.2 = 0.0 Wh
    1-0:16.7.0 = -4308 W
    1-0:36.7.0 = -1392 W
    1-0:56.7.0 = -1432 W
    1-0:76.7.0 = -1482 W
PowerMeterTransmission:
  server_id: [6, 73, 83, 75, 1, 14, 31, 102, 41, 154]
  time: Some(99258249)
  values:
    1-0:1.8.0 = 10732309.1 Wh
    1-0:1.8.1 = 10732309.1 Wh
    1-0:1.8.2 = 0.0 Wh
    1-0:2.8.0 = 28275325.7 Wh
    1-0:2.8.1 = 28275325.7 Wh
    1-0:2.8.2 = 0.0 Wh
    1-0:16.7.0 = -4302 W
    1-0:36.7.0 = -1396 W
    1-0:56.7.0 = -1428 W
    1-0:76.7.0 = -1478 W
PowerMeterTransmission:
  server_id: [6, 73, 83, 75, 1, 14, 31, 102, 41, 154]
  time: Some(99258250)
  values:
    1-0:1.8.0 = 10732309.1 Wh
    1-0:1.8.1 = 10732309.1 Wh
    1-0:1.8.2 = 0.0 Wh
    1-0:2.8.0 = 28275327.0 Wh
    1-0:2.8.1 = 28275327.0 Wh
    1-0:2.8.2 = 0.0 Wh
    1-0:16.7.0 = -4307 W
    1-0:36.7.0 = -1397 W
    1-0:56.7.0 = -1430 W
    1-0:76.7.0 = -1480 W
PowerMeterTransmission:
  server_id: [6, 73, 83, 75, 1, 14, 31, 102, 41, 154]
  time: Some(99258251)
  values:
    1-0:1.8.0 = 10732309.1 Wh
    1-0:1.8.1 = 10732309.1 Wh
    1-0:1.8.2 = 0.0 Wh
    1-0:2.8.0 = 28275328.2 Wh
    1-0:2.8.1 = 28275328.2 Wh
    1-0:2.8.2 = 0.0 Wh
    1-0:16.7.0 = -4281 W
    1-0:36.7.0 = -1375 W
    1-0:56.7.0 = -1432 W
    1-0:76.7.0 = -1479 W
PowerMeterTransmission:
  server_id: [6, 73, 83, 75, 1, 14, 31, 102, 41, 154]
  time: Some(99258252)
  values:
    1-0:1.8.0 = 10732309.1 Wh
    1-0:1.8.1 = 10732309.1 Wh
    1-0:1.8.2 = 0.0 Wh
    1-0:2.8.0 = 28275329.5 Wh
    1-0:2.8.1 = 28275329.5 Wh
    1-0:2.8.2 = 0.0 Wh
    1-0:16.7.0 = -4310 W
    1-0:36.7.0 = -1402 W
    1-0:56.7.0 = -1430 W
    1-0:76.7.0 = -1478 W
PowerMeterTransmission:
  server_id: [6, 73, 83, 75, 1, 14, 31, 102, 41, 154]
  time: Some(99258253)
  values:
    1-0:1.8.0 = 10732309.1 Wh
    1-0:1.8.1 = 10732309.1 Wh
    1-0:1.8.2 = 0.0 Wh
    1-0:2.8.0 = 28275330.7 Wh
    1-0:2.8.1 = 28275330.7 Wh
    1-0:2.8.2 = 0.0 Wh
    1-0:16.7.0 = -4305 W
    1-0:36.7.0 = -1400 W
    1-0:56.7.0 = -1428 W
    1-0:76.7.0 = -1478 W
PowerMeterTransmission:
  server_id: [6, 73, 83, 75, 1, 14, 31, 102, 41, 154]
  time: Some(99258255)
  values:
    1-0:1.8.0 = 10732309.1 Wh
    1-0:1.8.1 = 10732309.1 Wh
    1-0:1.8.2 = 0.0 Wh
    1-0:2.8.0 = 28275332.0 Wh
    1-0:2.8.1 = 28275332.0 Wh
    1-0:2.8.2 = 0.0 Wh
    1-0:16.7.0 = -4318 W
    1-0:36.7.0 = -1406 W
    1-0:56.7.0 = -1434 W
    1-0:76.7.0 = -1479 W
PowerMeterTransmission:
  server_id: [6, 73, 83, 75, 1, 14, 31, 102, 41, 154]
  time: Some(99258256)
  values:
    1-0:1.8.0 = 10732309.1 Wh
    1-0:1.8.1 = 10732309.1 Wh
    1-0:1.8.2 = 0.0 Wh
    1-0:2.8.0 = 28275333.2 Wh
    1-0:2.8.1 = 28275333.2 Wh
    1-0:2.8.2 = 0.0 Wh
    1-0:16.7.0 = -4297 W
    1-0:36.7.0 = -1393 W
    1-0:56.7.0 = -1429 W
    1-0:76.7.0 = -1476 W
Decoder error: DiscardedBytes(416)

